<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/Image_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/Input_Name"
                style="@style/EditText_design_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="235dp"
                android:hint="@string/give_player_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/Input_Specality"
                style="@style/EditText_design_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="214dp"
                android:hint="@string/specality_of_player"
                android:inputType="text" />

            <EditText
                android:id="@+id/Input_Description"
                style="@style/EditText_design_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/about_this_player"
                android:inputType="textLongMessage" />

            <EditText
                android:id="@+id/Input_bowl"
                android:inputType="numberDecimal"
                style="@style/EditText_design_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/best_bowling_stat" />

            <EditText
                android:id="@+id/Input_bat"
                android:inputType="numberDecimal"
                style="@style/EditText_design_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/best_batting_stat" />

            <EditText
                android:id="@+id/Input_trop_rpl"
                android:inputType="numberDecimal"
                style="@style/EditText_design_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rpl_trophies" />

            <EditText
                android:id="@+id/Input_trop_rashes"
                android:inputType="numberDecimal"
                style="@style/EditText_design_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rashes_trophies" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Input_image"
                    style="@style/Button_design_dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/player_image" />

                <ImageView
                    android:id="@+id/Input_Image_preview"
                    android:layout_width="217dp"
                    android:layout_height="152dp"
                    android:contentDescription="@string/image_view_text"
                    android:visibility="invisible" />
            </LinearLayout>

            <Button
                android:id="@+id/Input_button"
                style="@style/Button_design_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_player" />

            <Button
                android:id="@+id/go_to_list_button"
                style="@style/Button_design_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/show_player_list" />
        </LinearLayout>
    </FrameLayout>
</ScrollView>